# AI-Code-Review-Secret-Leakage-Detection-Platform

./: Makefile  README.md  docker-compose.yml
backend/: app.db  pyproject.toml
backend/ai_code_review_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/llm/: base.py  factory.py  mock.py  openai_compatible.py
backend/app/models/: __init__.py  entities.py
backend/app/policies/: engine.py
backend/app/rules/: ai_rules.py  base.py  config_rules.py  js_rules.py  python_rules.py  registry.py
backend/app/scanners/: dependency_scanner.py  rule_scanner.py  secret_scanner.py
backend/app/schemas/: common.py
backend/app/services/: pr_service.py  report_service.py  scan_service.py  webhook_service.py
backend/app/utils/: cwe.py  diff.py  files.py  security.py
backend/tests/: conftest.py  test_api_flows.py  test_policy_and_reports.py  test_rules.py  test_secret_scanner.py
demo/PAMS/PAMS-Pet-Adoption-Management-System-main/: README.md  app.py  database.py  petadoption.db
demo/mock_webhooks/: pr_opened.json
demo/sample_diffs/: pr_unsafe.diff
demo/vulnerable_repo/: README.md  agent_config.yaml  app.py  config.py  package.json  prompting.py  requirements.txt  server.js
docs/: api.md  architecture.md  demo.md  threat-model.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: FindingTable.tsx  SeverityChart.tsx
frontend/src/lib/: api.ts
scripts/: demo.sh  seed_data.py
(+16 files in other folders)
